--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/router": "^16.1.0",
     "@syncfusion/ej2-angular-schedule": "^22.2.11",
     "@syncfusion/ej2-material-theme": "~22.2.11",
+    "apexcharts": "^3.42.0",
+    "ng-apexcharts": "^1.8.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
